--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcc 'DG'
 - !lcsh 'Mentana, Battle of, Mentana, Italy, 1867'
 - !lcsh 'Papal States -- History -- 1815-1870'
+- GITenberg
 title: "Mentana e il dito di Dio\r\nEpisodi narrati dal superstite Ettore Pozzi -\
   \ Seconda edizione, con importanti aggiunte fatte dall'Autore"
 url: http://www.gutenberg.org/ebooks/25197
